MB-25948: Correctly handle get() of deleted item after getMeta()

There is a unhandled combination of inputs and StoredValue state when
attempting to get a deleted item which has previously been accessed
via GetMeta. The result of which is the (deleted) item is incorrectly
reported as not existing.

The sequence of events to trigger this are as follows:

1. A document becomes deleted and has a non-zero body (e.g. System
   XATTRs which are preserved after deletion).

2. getMeta() is called on the deleted item - this triggers a bgFetch,
   bringing the item's metadata into the HashTable with state
   tempDeletedItem.

3. get(GET_DELETED_VALUE) is called on the item - this finds the item
   in state tempDeleted, which is a case which isn't handled and hence
   get() returns ENOENT instead of SUCCESS (deleted).

There are actually two bugs which cause this to occur:

1. get(DELETED_VALUE) should schedule a bgFetch in the case of
   tempDeletedItem and GET_DELETED_ITEM==true; to obtain the deleted
   body.

2. Once the body is bgFetched, it was not fully updated in the
   hashTable, as StoredValue::restoreValue() didn't update the
   metadata if the existing item was tempDeleted.

Fixing both of these bugs fixes the isssue.

Change-Id: Iee7e0655f4f775a1db7e507eff8620d50fc9e7d4
Reviewed-on: http://review.couchbase.org/83150
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>
Well-Formed: Build Bot <build@couchbase.com>